--- a/nextflow.config
+++ b/nextflow.config
@@ -11,17 +11,28 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    input                          = "${baseDir}/data/input.csv"
+    
+    // 'denovo' or 'reference'
+    method                         = 'reference'
 
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore            = false
+    // Denovo options
+    sequence_type                  = 'PE'
+    minReadDepth_WithinIndividual  = null
+    minReadDepth_BetweenIndividual = null
+
+    // Reference options
+    genome                         = null
+    igenomes_base                  = 's3://ngi-igenomes/igenomes'
+    igenomes_ignore                = false
+
+    // Alignment options
+    bwamem_sort_view               = true
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    max_multiqc_email_size     = '25.MB'
+    multiqc_config                 = null
+    multiqc_title                  = null
+    max_multiqc_email_size         = '25.MB'
 
     // Boilerplate options
     outdir                     = './results'
@@ -47,7 +58,7 @@ params {
     // Max resource options
     // Defaults only, expecting to be overwritten
     max_memory                 = '128.GB'
-    max_cpus                   = 16
+    max_cpus                   = 5
     max_time                   = '240.h'
 
 }
