created cdhit_to_rbclstr process. issues with samtools/stats/main.nf

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ params {
     input                          = "${baseDir}/data/input.csv"
     
     // 'denovo' or 'reference'
-    method                         = 'reference'
+    method                         = 'denovo'
 
     // Denovo options
     sequence_type                  = 'PE'
@@ -27,6 +27,7 @@ params {
     igenomes_ignore                = false
 
     // Alignment options
+    aligner                        = 'bwa'
     bwamem_sort_view               = true
 
     // MultiQC options
@@ -57,7 +58,7 @@ params {
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
+    max_memory                 = '2.GB'
     max_cpus                   = 5
     max_time                   = '240.h'
 
