adding alignment - missing bwa2, adding revisions to denovo, primitive lengths.txt

--- a/nextflow.config
+++ b/nextflow.config
@@ -64,6 +64,17 @@ params {
 
 }
 
+process {
+    withLabel: BWA_MEM {
+        // provide warning message stating 'proceeding with default values for BWA_MEM'
+        ext.args = '-A 1 -B 4 -O 6'
+    }
+    withLabel: FASTP {
+        ext.args = '--cut_by_quality5 20 --cut_by_quality3 20 --cut_window_size 5 --cut_mean_quality 15 -q 15 -u 50'
+        //ext.umi_params = '' // if umi's are present please specify it's parameters in fastp format
+    }
+}
+
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
