add bam_intervals_bedtools subworkflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,9 @@ params {
     aligner                        = 'bwa'
     bwamem_sort_view               = true
 
+    // Variant Calling options
+    splitByReadCoverage            = '500000'
+
     // MultiQC options
     multiqc_config                 = null
     multiqc_title                  = null
