added pipeline summary to README.md and edited nextflow.config with test genome and subworkflows/bam_variant_calling_freebayes

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
     minReadDepth_BetweenIndividual = null
 
     // Reference options
-    genome                         = null
+    genome                         = '/mnt/d/nextflow_testing/Grayling/data/GCA_004348285.1_ASM434828v1_genomic.fna'
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
