add configs for cluster and base

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -14,10 +14,9 @@ process {
 
     publishDir = [
         path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-        mode: 'copy',
+        mode: 'symlink',
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
-
     withName: SAMPLESHEET_CHECK {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
@@ -25,11 +24,25 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-
+    withName: BWA_MEM {
+        // provide warning message stating 'proceeding with default values for BWA_MEM'
+        ext.args = '-A 1 -B 4 -O 6'
+        errorStrategy = 'retry'
+        maxRetries = 3
+    }
+    withName: BEDTOOLS_BAMTOBED {
+        errorStrategy = 'retry'
+        maxRetries = 3
+    }
+    withName: FASTP {
+        ext.args = '--cut_by_quality5 20 --cut_by_quality3 20 --cut_window_size 5 --cut_mean_quality 15 -q 15 -u 50'
+        maxForks = 30
+        queue = 'long'
+        //ext.umi_params = '' // if umi's are present please specify it's parameters in fastp format
+    }
     withName: FASTQC {
         ext.args = '--quiet'
     }
-
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
@@ -37,5 +50,10 @@ process {
             pattern: '*_versions.yml'
         ]
     }
-
+    withName: BWA_INDEX {
+        clusterOptions  = '-q general -p general -c 5'
+        memory = { 30.GB * task.attempt }
+        errorStrategy = 'retry'
+        maxRetries = '3'
+    }
 }
