--- a/conf/base.config
+++ b/conf/base.config
@@ -47,6 +47,11 @@ process {
         memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
+    withLabel:process_superhigh {
+        cpus   = { check_max( 1    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 100.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+    }
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
     }
