rename .yml files, add modules.config for args, publishDir, add rainbow_div instead of rainbow_clstr, remove sort_view and set strictly to true

--- a/conf/base.config
+++ b/conf/base.config
@@ -47,7 +47,7 @@ process {
         memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
-    withLabel:process_superhigh {
+    withLabel:process_super {
         cpus   = { check_max( 1    * task.attempt, 'cpus'    ) }
         memory = { check_max( 100.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
