--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -2,7 +2,7 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                          = "${baseDir}/data/input_3_copy.csv"
+    input                          = "${baseDir}/data/input.csv"
     
     // 'denovo' or 'reference'
     method                         = 'reference'
@@ -13,7 +13,7 @@ params {
     minReadDepth_BetweenIndividual = null
 
     // Reference options
-    genome                         = '/home/FCAM/gbarrett/data/Grayling/references/CM014990.1.fa'
+    genome                         = null
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
