--- a/nextflow.config
+++ b/nextflow.config
@@ -9,11 +9,10 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                          = "${baseDir}/data/input.csv"
     
-    // 'denovo' or 'reference'
+    // Method options e.g.'denovo' or 'reference'
     method                         = 'denovo'
 
     // Denovo options
@@ -26,9 +25,19 @@ params {
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
+    // Intermediate files
+    save_trimmed                   = false
+    save_uniqseq                   = false
+    save_uniq_full_fasta           = false
+    save_seqtk_seq_fasta           = false
+    save_cdhit_clstr               = false
+    save_trim_adapters_fastp       = false
+    save_reference_fai             = false
+    save_intervals                 = true
+    save_freebayes_intervals       = false
+
     // Alignment options
     aligner                        = 'bwa'
-    bwamem_sort_view               = true
 
     // Variant Calling options
     splitByReadCoverage            = '500000'
@@ -41,6 +50,7 @@ params {
     // Boilerplate options
     outdir                     = './results'
     tracedir                   = "${params.outdir}/pipeline_info"
+    publish_dir_mode           = 'symlink'
     email                      = null
     email_on_fail              = null
     plaintext_email            = false
@@ -48,7 +58,7 @@ params {
     help                       = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'genomes'
+    schema_ignore_params       = params.schema_ignore_params = "publish_dir_mode,split-by-read-coverage,splitByReadCoverage,aligner,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min-read-depth_Between-individual,minReadDepth_BetweenIndividual,minReadDepth_WithinIndividual,min-read-depth_Within-individual,sequence_type,method,genomes" 
     enable_conda               = false
 
     // Config options
@@ -65,17 +75,6 @@ params {
     max_cpus                   = 5
     max_time                   = '240.h'
 
-}
-
-process {
-    withLabel: BWA_MEM {
-        // provide warning message stating 'proceeding with default values for BWA_MEM'
-        ext.args = '-A 1 -B 4 -O 6'
-    }
-    withLabel: FASTP {
-        ext.args = '--cut_by_quality5 20 --cut_by_quality3 20 --cut_window_size 5 --cut_mean_quality 15 -q 15 -u 50'
-        //ext.umi_params = '' // if umi's are present please specify it's parameters in fastp format
-    }
 }
 
 // Load base.config by default for all pipelines
