--- a/conf/modules.config
+++ b/conf/modules.config
@@ -287,6 +287,16 @@ process {
         ]
     }
 
+    withName: SAMTOOLS_IDXSTATS {
+        publishDir = [
+            [
+                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.idxstats"
+            ]
+        ]
+    }
+
     withName: BEDTOOLS_BAMTOBED {
         ext.args = ''
         publishDir = [
