adding publishDir to xanadu config

--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -34,6 +34,7 @@ params {
     tracedir                   = "${params.outdir}/pipeline_info"
     email                      = null
     email_on_fail              = null
+    publish_dir_mode           = 'copy'
     plaintext_email            = false
     monochrome_logs            = false
     help                       = false
