adding publishDir to xanadu config

--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -19,10 +19,20 @@ params {
 
     // Alignment options
     aligner                        = 'bwa'
-    bwamem_sort_view               = true
 
     // Variant Calling options
     splitByReadCoverage            = '500000'
+
+    // Intermediate files
+    save_trimmed                   = false
+    save_uniqseq                   = false
+    save_uniq_full_fasta           = false
+    save_seqtk_seq_fasta           = false
+    save_cdhit_clstr               = false
+    save_trim_adapters_fastp       = false
+    save_reference_fai             = false
+    save_intervals                 = true
+    save_freebayes_intervals       = false
 
     // MultiQC options
     multiqc_config                 = null
