adding bwa parameters and upgrade bedtools merge to himem

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -212,8 +212,14 @@ process {
     withName: BWA_MEM {
         ext.args = { [
             // static variables
-            '-L 20,5 -a -M -T 10'
+            '-L 20,5 -a -M -T 30',
+            // set default scores for alignments 
+            params.matching_score ? ' -A ' + params.matching_score : '-A 1',
+            params.mismatch_score ? ' -B ' + params.mismatch_score : '-B 4',
+            params.gap_penalty    ? ' -O ' + params.gap_penalty    : '-O 6'
+
         ].join(' ').trim() }
+        ext.args2 = ''
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
