--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -64,7 +64,7 @@ params {
     // Max resource options
     // Defaults only, expecting to be overwritten
     max_memory                 = '200.GB'
-    max_cpus                   = 20
+    max_cpus                   = 50
     max_time                   = '240.h'
 
 }
@@ -99,12 +99,6 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-
-        
-        process.executor = 'slurm'
-        executor.queueSize = 50
-        process.clusterOptions = '--qos=general --partition=general'
-        executor.submitRateLimit = '20 sec'
     }
     //test      { includeConfig 'test.config'      }
     //test_full { includeConfig 'test_full.config' }
@@ -128,10 +122,16 @@ env {
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
     TMPDIR='/home/FCAM/gbarrett/TMP_DIR'
     SINGULARITY_CACHEDIR='/home/FCAM/gbarrett/TMP_DIR'
-    NXF_OPTS="-Xms1g -Xmx30g"
+    //NXF_OPTS="-Xms1g -Xmx30g" can't set NXF variables within config must use export before script execution
     _JAVA_OPTIONS="-Xms1g -Xmx30g"
 
 }
+
+process.executor = 'slurm'
+executor.queueSize = 50
+process.clusterOptions = '--qos=general --partition=general'
+executor.submitRateLimit = '20 sec'
+process {withName: BWA_MEM {clusterOptions = '--qos=himem --partition=himem'}}
 
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
