--- a/nextflow.config
+++ b/nextflow.config
@@ -17,13 +17,23 @@ params {
 
     // Denovo options
     sequence_type                  = 'PE'
-    minReadDepth_WithinIndividual  = null
-    minReadDepth_BetweenIndividual = null
+    minReadDepth_WithinIndividual  = null // defaults to 
+    minReadDepth_BetweenIndividual = null // defaults to 
 
     // Reference options
     genome                         = '/mnt/d/nextflow_testing/Grayling/data/GCA_004348285.1_ASM434828v1_genomic.fna'
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
+
+
+    // Alignment options
+    aligner                        = 'bwa'
+    matching_score                 = null // defaults to 4
+    mismatch_score                 = null // defaults to 
+    gap_penalty                    = null // defaults to 
+
+    // Variant Calling options
+    splitByReadCoverage            = '500000'
 
     // Intermediate files
     save_trimmed                   = false
@@ -35,12 +45,6 @@ params {
     save_reference_fai             = false
     save_intervals                 = true
     save_freebayes_intervals       = false
-
-    // Alignment options
-    aligner                        = 'bwa'
-
-    // Variant Calling options
-    splitByReadCoverage            = '500000'
 
     // MultiQC options
     multiqc_config                 = null
@@ -60,6 +64,7 @@ params {
     show_hidden_params         = false
     schema_ignore_params       = params.schema_ignore_params = "publish_dir_mode,split-by-read-coverage,splitByReadCoverage,aligner,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min-read-depth_Between-individual,minReadDepth_BetweenIndividual,minReadDepth_WithinIndividual,min-read-depth_Within-individual,sequence_type,method,genomes" 
     enable_conda               = false
+    method_options             = ' denovo, reference'
 
     // Config options
     custom_config_version      = 'master'
