adding bwa parameters and upgrade bedtools merge to himem

--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -127,11 +127,11 @@ env {
 
 }
 
+// setup SLURM for xanadu
 process.executor = 'slurm'
 executor.queueSize = 50
 process.clusterOptions = '--qos=general --partition=general'
 executor.submitRateLimit = '20 sec'
-process {withName: BWA_MEM {clusterOptions = '--qos=himem --partition=himem'}}
 
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
