add samtools stats to multiqc + fastp json

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,8 +17,8 @@ params {
 
     // Denovo options
     sequence_type                  = 'PE'
-    minReadDepth_WithinIndividual  = null // defaults to 
-    minReadDepth_BetweenIndividual = null // defaults to 
+    minReadDepth_WithinIndividual  = null // defaults to 2
+    minReadDepth_BetweenIndividual = null // defaults to 2
 
     // Reference options
     genome                         = '/mnt/d/nextflow_testing/Grayling/data/GCA_004348285.1_ASM434828v1_genomic.fna'
@@ -28,9 +28,9 @@ params {
 
     // Alignment options
     aligner                        = 'bwa'
-    matching_score                 = null // defaults to 4
-    mismatch_score                 = null // defaults to 
-    gap_penalty                    = null // defaults to 
+    matching_score                 = null // defaults to 1
+    mismatch_score                 = null // defaults to 4
+    gap_penalty                    = null // defaults to 6
 
     // Variant Calling options
     splitByReadCoverage            = '500000'
