--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -7,18 +7,24 @@ params {
     // 'denovo' or 'reference'
     method                         = 'reference'
 
+
     // Denovo options
     sequence_type                  = 'PE'
-    minReadDepth_WithinIndividual  = null
-    minReadDepth_BetweenIndividual = null
+    minReadDepth_WithinIndividual  = null // defaults to 2
+    minReadDepth_BetweenIndividual = null // defaults to 2
 
     // Reference options
     genome                         = null
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
+
     // Alignment options
     aligner                        = 'bwa'
+    matching_score                 = null // defaults to 1
+    mismatch_score                 = null // defaults to 4
+    gap_penalty                    = null // defaults to 6
+
 
     // Variant Calling options
     splitByReadCoverage            = '500000'
