switch sort to bedtools sort

--- a/conf/base.config
+++ b/conf/base.config
@@ -57,6 +57,7 @@ process {
     }
     withLabel:process_high_memory {
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+        cpus   = 1
         clusterOptions = '--qos=himem --partition=himem'
     }
     withLabel:error_ignore {
