adding samtools view -q1 to bwamem module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -214,12 +214,15 @@ process {
             // static variables
             '-L 20,5 -a -M -T 30',
             // set default scores for alignments 
-            params.matching_score ? ' -A ' + params.matching_score : '-A 1',
-            params.mismatch_score ? ' -B ' + params.mismatch_score : '-B 4',
-            params.gap_penalty    ? ' -O ' + params.gap_penalty    : '-O 6'
-
+            params.matching_score ? '-A ' + params.matching_score : '-A 1',
+            params.mismatch_score ? '-B ' + params.mismatch_score : '-B 4',
+            params.gap_penalty    ? '-O ' + params.gap_penalty    : '-O 6'
         ].join(' ').trim() }
-        ext.args2 = ''
+        
+        ext.args2 = { [ 
+            '-S -h -u',
+            params.quality_score ? '-q ' + params.quality_score   : '-q 1'
+        ].join(' ').trim() }
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
