--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -7,29 +7,27 @@ params {
     // 'denovo' or 'reference'
     method                         = 'reference'
 
-
     // Denovo options
     sequence_type                  = 'PE'
     minReadDepth_WithinIndividual  = null // defaults to 2
     minReadDepth_BetweenIndividual = null // defaults to 2
 
-    // Reference options
+    // Reference Genome options
     genome                         = null
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
-
 
     // Alignment options
     aligner                        = 'bwa'
     matching_score                 = null // defaults to 1
     mismatch_score                 = null // defaults to 4
     gap_penalty                    = null // defaults to 6
-
+    quality_score                  = null // defaults to 1 
 
     // Variant Calling options
     splitByReadCoverage            = '500000'
 
-    // Intermediate files
+    // Intermediate files to put in the results dir.
     save_trimmed                   = false
     save_uniqseq                   = false
     save_uniq_full_fasta           = false
