--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,8 @@ params {
     matching_score                 = null // defaults to 1
     mismatch_score                 = null // defaults to 4
     gap_penalty                    = null // defaults to 6
+    quality_score                  = 1 // defaults to 1 
+
 
     // Variant Calling options
     splitByReadCoverage            = '500000'
