upgrade the time to 8hrs bedtools merge cov

--- a/conf/base.config
+++ b/conf/base.config
@@ -57,6 +57,7 @@ process {
     }
     withLabel:process_high_memory {
         memory = { check_max( 400.GB * task.attempt, 'memory' ) }
+        time   = { check_max( 8.h   * task.attempt, 'time'    ) }
         cpus   = 1
         clusterOptions = '--qos=himem --partition=himem'
     }
