moment of hope switch back to bedtools sort before merge cov

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,6 +39,7 @@ process {
     }
 
     withName: FASTP {
+        // umi specific arguments to fastp. see https://github.com/OpenGene/fastp
         ext.umi_args = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
         ext.args = '--detect_adapter_for_pe --dont_eval_duplication --cut_right --cut_window_size=25 --cut_mean_quality=20 --correction --overlap_diff_limit=1 --trim_poly_g --dont_eval_duplication --disable_length_filtering --trim_front1 6 --trim_front2 3'
         publishDir = [
@@ -145,6 +146,7 @@ process {
     }
 
     withName: RAINBOW_DIV {
+        // recommended static arguments
         ext.args = '-f 0.5 -K 10'
         publishDir = [
             [
@@ -161,6 +163,7 @@ process {
     }
 
     withName: RAINBOW_MERGE {
+        // recommended static arguments
         ext.args = '-r 2 -N10000 -R10000 -l 20 -f 0.75'
         publishDir = [
             [
@@ -211,7 +214,7 @@ process {
 
     withName: BWA_MEM {
         ext.args = { [
-            // static variables
+            // recommended static arguments
             '-L 20,5 -a -M -T 30',
             // set default scores for alignments 
             params.matching_score ? '-A ' + params.matching_score : '-A 1',
