adding subset ability for bed channel, bedtools merge you won

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,8 +33,8 @@ params {
     gap_penalty                    = null // defaults to 6
     quality_score                  = 1 // defaults to 1 
 
-
     // Variant Calling options
+    subset_intervals_channel       = null
     splitByReadCoverage            = '500000'
 
     // Intermediate files
