remove duplicates bcftools

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -448,7 +448,7 @@ process {
     }
 
     withName: BCFTOOLS_CONCAT {
-        ext.args = ''
+        ext.args = '--remove-duplicates'
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/variant_calling/" },
