corrected file for DP/CC calculation in create_intervals.nf

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ params {
     minReadDepth_BetweenIndividual = null // defaults to 2
 
     // Reference options
-    genome                         = '/mnt/d/nextflow_testing/Grayling/data/GCA_004348285.1_ASM434828v1_genomic.fna'
+    genome                         = '/mnt/d/nextflow_testing/Grayling/data/CM014990.1.fna'
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
