change SLURM setup to within closures

--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -130,10 +130,15 @@ env {
 }
 
 // setup SLURM for xanadu
-process.executor = 'slurm'
-executor.queueSize = 50
-process.clusterOptions = '--qos=general --partition=general'
-executor.submitRateLimit = '20 sec'
+process {
+    executor = 'slurm'
+    withLabel:process_high_memory {clusterOptions = '--qos=himem --partition=himem'}
+    withLabel:'!process_high_memory' {clusterOptions = '--qos=general --partition=general'}
+}
+executor {
+    queueSize = 100
+    submitRateLimit = '5 sec'
+}
 
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
