adding subset_intervals_channel to xanadu.config

--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -24,6 +24,10 @@ params {
     gap_penalty                    = null // defaults to 6
     quality_score                  = null // defaults to 1 
 
+    // Intervals options
+    subset_intervals_channel       = 300
+
+
     // Variant Calling options
     splitByReadCoverage            = '500000'
 
